--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+    http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+    version="3.1">
 
 
 
@@ -189,6 +193,7 @@
 	<servlet>
 		<servlet-name>log</servlet-name>
 		<servlet-class>event.Users.UserRegistrationServlet</servlet-class>
+		</servlet>
 
 	<servlet-mapping>
 		<servlet-name>log</servlet-name>
